src/test/data/tests/chapter_17/invalid_types/scalar_expressions/void_if_condition.c
void f(void){
    return;
}

int main(void) {
  int x = 10;

  // void expressions are non-scalar, so they can't be used as controlling conditions
  if (f())
    return 0;
  return 1;
}
